[KMT] Added fixes for spacing in content

--- a/komunat/src/app/content/content.page.scss
+++ b/komunat/src/app/content/content.page.scss
@@ -8,6 +8,8 @@
 ion-col {
   margin-left:10px;
   margin-top:10px;
+  justify-content: center;
+
 }
 
 .buttonSection {
@@ -46,14 +48,18 @@ ion-col {
     color: #4C4D4F;
     font-size: 8vw;
     text-align: center; 
+    font-family: 'Source Sans Pro', sans-serif;
+    font-weight: bold;
   }
-
+  
   h4 {
     height: 5vh;
     font-size: 6vw;
     margin: 1em;
     color: #4C4D4F;
     text-align: center; 
+    font-family: 'Source Sans Pro', sans-serif;
+    font-weight: bold;
   }
   
   .valueImage {
@@ -61,11 +67,6 @@ ion-col {
     margin:0px;
   }
 
-  h2 {
-    font-family: 'Source Sans Pro', sans-serif;
-    font-weight: bold;
-    font-size: 5vw;
-  }
   
   p {
     font-family: 'Source Sans Pro', sans-serif;
